--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12328,7 +12328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **6. Optional (Bonus)**\n",
+    "## **6. Use of another model**\n",
     "\n",
     "Let's try to use decision trees to perform the same task. We start by using the same amount of point used for the training of the best model."
    ]
